# Research-Pulse

./: CHANGELOG.md  README.md  environment-dev.yml  environment.yml  pyproject.toml
.github/workflows/: test.yml
research_agent/: agent.py  cache.py  cli.py  search.py  ui.py  zotero.py  zotero_recommend.py
research_agent/sources/: openalex.py
scripts/: create_github_issues.sh
tests/: __init__.py  conftest.py
tests/integration/: test_cli_smoke.py  test_memory_recommend_flow.py  test_pipeline_dedup.py  test_search_flow.py  test_zotero_recommend_flow.py
tests/unit/: test_bm25.py  test_cache.py  test_compare.py  test_config.py  test_features.py  test_http.py  test_insights.py  test_local_config.py  test_log.py  test_memory.py  test_models.py  test_openalex.py  test_rank.py  test_recommend.py  test_remaining_modules.py  test_search.py  test_sources_misc.py  test_subscribers.py  test_summarize.py  test_venues.py  test_zotero.py  test_zotero_recommend.py
